--- a/index.hbs
+++ b/index.hbs
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>{{htmlWebpackPlugin.options.title}}</title>
+  <script src="http://vk.com/js/api/openapi.js" type="text/javascript"></script>
 </head>
 <body>
+ {{>'./src/templates/friend-list-content.hbs'}}
 </body>
 </html>
